--- a/main.html
+++ b/main.html
@@ -1,1 +1,13 @@
-<h1>hhjk</h1>
+<html>
+    <body>
+        <header style="background-color: black;color:white">
+            <p>Это шапка сайта</p>
+        </header>
+        <main style="">
+            <p>Основная информация</p>
+        </main>
+        <footer style="background-color: black;color:white">
+            <p>Это подвал</p>
+        </footer>
+    </body>
+</html>
